--- a/xcp_d/data/nuisance/rapidtide+36P.yml
+++ b/xcp_d/data/nuisance/rapidtide+36P.yml
@@ -55,6 +55,6 @@ confounds:
 		- white_matter_derivative1_power2
 -	dataset: fmripost-rapidtide
 	query:
-		description: confounds
+		description: LFO
 		extension: .nii.gz
 		suffix: timeseries
