--- a/xcp_d/data/nuisance/aroma.yml
+++ b/xcp_d/data/nuisance/aroma.yml
@@ -13,7 +13,7 @@ confounds:
     columns:
     - csf
     - white_matter
--   dataset: fmripost-aroma
+-   dataset: aroma
     query:
         description: confounds
         extension: .tsv
