--- a/xcp_d/data/nuisance/aroma_gsr.yml
+++ b/xcp_d/data/nuisance/aroma_gsr.yml
@@ -16,7 +16,7 @@ confounds:
     - csf
     - white_matter
 -   name: aroma_confounds
-    dataset: fmripost-aroma
+    dataset: aroma
     query:
         description: confounds
         extension: .tsv
