--- a/xcp_d/data/nuisance/24P.yml
+++ b/xcp_d/data/nuisance/24P.yml
@@ -7,34 +7,35 @@ description: |
     and their quadratic expansion of those six motion parameters and their
     temporal derivatives [@benchmarkp;@satterthwaite_2013].
 confounds:
--   dataset: preprocessed
-    query:
-        space: null
-        description: confounds
-        extension: .tsv
-        suffix: timeseries
-    columns:
-    - trans_x
-    - trans_x_derivative1
-    - trans_x_derivative1_power2
-    - trans_x_power2
-    - trans_y
-    - trans_y_derivative1
-    - trans_y_derivative1_power2
-    - trans_y_power2
-    - trans_z
-    - trans_z_derivative1
-    - trans_z_derivative1_power2
-    - trans_z_power2
-    - rot_x
-    - rot_x_derivative1
-    - rot_x_power2
-    - rot_x_derivative1_power2
-    - rot_y
-    - rot_y_derivative1
-    - rot_y_power2
-    - rot_y_derivative1_power2
-    - rot_z
-    - rot_z_derivative1
-    - rot_z_power2
-    - rot_z_derivative1_power2
+    preproc_confounds:
+        dataset: preprocessed
+        query:
+            space: null
+            description: confounds
+            extension: .tsv
+            suffix: timeseries
+        columns:
+        - trans_x
+        - trans_x_derivative1
+        - trans_x_derivative1_power2
+        - trans_x_power2
+        - trans_y
+        - trans_y_derivative1
+        - trans_y_derivative1_power2
+        - trans_y_power2
+        - trans_z
+        - trans_z_derivative1
+        - trans_z_derivative1_power2
+        - trans_z_power2
+        - rot_x
+        - rot_x_derivative1
+        - rot_x_power2
+        - rot_x_derivative1_power2
+        - rot_y
+        - rot_y_derivative1
+        - rot_y_power2
+        - rot_y_derivative1_power2
+        - rot_z
+        - rot_z_derivative1
+        - rot_z_power2
+        - rot_z_derivative1_power2
