--- a/xcp_d/data/nuisance/36P.yml
+++ b/xcp_d/data/nuisance/36P.yml
@@ -8,46 +8,47 @@ description: |
 	and quadratic expansion of six motion parameters, tissue signals and
 	their temporal derivatives [@benchmarkp;@satterthwaite_2013].
 confounds:
-- dataset: preprocessed
-	query:
-		space: null
-		description: confounds
-		extension: .tsv
-		suffix: timeseries
-	columns:
-	- trans_x
-	- trans_x_derivative1
-	- trans_x_derivative1_power2
-	- trans_x_power2
-	- trans_y
-	- trans_y_derivative1
-	- trans_y_derivative1_power2
-	- trans_y_power2
-	- trans_z
-	- trans_z_derivative1
-	- trans_z_derivative1_power2
-	- trans_z_power2
-	- rot_x
-	- rot_x_derivative1
-	- rot_x_power2
-	- rot_x_derivative1_power2
-	- rot_y
-	- rot_y_derivative1
-	- rot_y_power2
-	- rot_y_derivative1_power2
-	- rot_z
-	- rot_z_derivative1
-	- rot_z_power2
-	- rot_z_derivative1_power2
-	- global_signal
-	- global_signal_derivative1
-	- global_signal_power2
-	- global_signal_derivative1_power2
-	- csf
-	- csf_derivative1
-	- csf_power2
-	- csf_derivative1_power2
-	- white_matter
-	- white_matter_derivative1
-	- white_matter_power2
-	- white_matter_derivative1_power2
+	preproc_confounds:
+		dataset: preprocessed
+		query:
+			space: null
+			description: confounds
+			extension: .tsv
+			suffix: timeseries
+		columns:
+		- trans_x
+		- trans_x_derivative1
+		- trans_x_derivative1_power2
+		- trans_x_power2
+		- trans_y
+		- trans_y_derivative1
+		- trans_y_derivative1_power2
+		- trans_y_power2
+		- trans_z
+		- trans_z_derivative1
+		- trans_z_derivative1_power2
+		- trans_z_power2
+		- rot_x
+		- rot_x_derivative1
+		- rot_x_power2
+		- rot_x_derivative1_power2
+		- rot_y
+		- rot_y_derivative1
+		- rot_y_power2
+		- rot_y_derivative1_power2
+		- rot_z
+		- rot_z_derivative1
+		- rot_z_power2
+		- rot_z_derivative1_power2
+		- global_signal
+		- global_signal_derivative1
+		- global_signal_power2
+		- global_signal_derivative1_power2
+		- csf
+		- csf_derivative1
+		- csf_power2
+		- csf_derivative1_power2
+		- white_matter
+		- white_matter_derivative1
+		- white_matter_power2
+		- white_matter_derivative1_power2
