Okay may this'll work?

--- a/xcp_d/data/nuisance/24P.yml
+++ b/xcp_d/data/nuisance/24P.yml
@@ -11,7 +11,7 @@ confounds:
         dataset: preprocessed
         query:
             space: null
-            description: confounds
+            desc: confounds
             extension: .tsv
             suffix: timeseries
         columns:
