--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -401,9 +401,9 @@ jobs:
 
   pytests:
     <<: *dockersetup
-    resource_class: medium
+    resource_class: large
     environment:
-      CIRCLE_CPUS: 2
+      CIRCLE_CPUS: 4
     steps:
       - checkout
       - run:
@@ -427,7 +427,13 @@ jobs:
           name: Run pytest on the tests directory
           no_output_timeout: 1h
           command: |
-            pytest --cov-append --cov-report term-missing --cov=xcp_d --data_dir=/src/xcp_d/.circleci/data --output_dir=/src/xcp_d/.circleci/out --working_dir=/src/xcp_d/.circleci/work xcp_d
+            pytest \
+              -n ${CIRCLE_CPUS} \
+              --cov-append --cov-report term-missing --cov=xcp_d \
+              --data_dir=/src/xcp_d/.circleci/data \
+              --output_dir=/src/xcp_d/.circleci/out \
+              --working_dir=/src/xcp_d/.circleci/work \
+              xcp_d
             mkdir /src/coverage
             mv /src/xcp_d/.coverage /src/coverage/.coverage.pytests
       - persist_to_workspace:
