--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
           paths:
             - /src/xcp_d/.circleci/data/ds001419-fmriprep
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    # Why do we need a big executor for this job?
     resource_class: large
 
   download_data_pnc:
@@ -128,6 +129,9 @@ jobs:
 
   nifti_without_freesurfer:
     <<: *dockersetup
+    resource_class: large
+    environment:
+      CIRCLE_CPUS: 4
     steps:
       - checkout
       - run:
@@ -159,6 +163,9 @@ jobs:
 
   nifti_without_freesurfer_with_main:
     <<: *dockersetup
+    resource_class: medium
+    environment:
+      CIRCLE_CPUS: 2
     steps:
       - checkout
       - run:
@@ -190,6 +197,9 @@ jobs:
 
   ds001419_nifti:
     <<: *dockersetup
+    resource_class: large
+    environment:
+      CIRCLE_CPUS: 4
     steps:
       - checkout
       - run:
@@ -218,11 +228,12 @@ jobs:
             - .coverage.ds001419_nifti
       - store_artifacts:
           path: /src/xcp_d/.circleci/out/test_ds001419_nifti/
-    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
-    resource_class: large
 
   ds001419_cifti:
     <<: *dockersetup
+    resource_class: large
+    environment:
+      CIRCLE_CPUS: 4
     steps:
       - checkout
       - run:
@@ -251,11 +262,12 @@ jobs:
             - .coverage.ds001419_cifti
       - store_artifacts:
           path: /src/xcp_d/.circleci/out/test_ds001419_cifti/
-    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
-    resource_class: large
 
   ukbiobank:
     <<: *dockersetup
+    resource_class: medium
+    environment:
+      CIRCLE_CPUS: 2
     steps:
       - checkout
       - run:
@@ -287,6 +299,9 @@ jobs:
 
   nibabies:
     <<: *dockersetup
+    resource_class: medium
+    environment:
+      CIRCLE_CPUS: 2
     steps:
       - checkout
       - run:
@@ -318,6 +333,9 @@ jobs:
 
   pnc_cifti:
     <<: *dockersetup
+    resource_class: medium
+    environment:
+      CIRCLE_CPUS: 2
     steps:
       - checkout
       - run:
@@ -349,6 +367,9 @@ jobs:
 
   pnc_cifti_t2wonly:
     <<: *dockersetup
+    resource_class: medium
+    environment:
+      CIRCLE_CPUS: 2
     steps:
       - checkout
       - run:
@@ -380,6 +401,9 @@ jobs:
 
   pytests:
     <<: *dockersetup
+    resource_class: large
+    environment:
+      CIRCLE_CPUS: 4
     steps:
       - checkout
       - run:
@@ -403,7 +427,13 @@ jobs:
           name: Run pytest on the tests directory
           no_output_timeout: 1h
           command: |
-            pytest --cov-append --cov-report term-missing --cov=xcp_d --data_dir=/src/xcp_d/.circleci/data --output_dir=/src/xcp_d/.circleci/out --working_dir=/src/xcp_d/.circleci/work xcp_d
+            pytest \
+              -n ${CIRCLE_CPUS} \
+              --cov-append --cov-report term-missing --cov=xcp_d \
+              --data_dir=/src/xcp_d/.circleci/data \
+              --output_dir=/src/xcp_d/.circleci/out \
+              --working_dir=/src/xcp_d/.circleci/work \
+              xcp_d
             mkdir /src/coverage
             mv /src/xcp_d/.coverage /src/coverage/.coverage.pytests
       - persist_to_workspace:
