Fix up nuisance configs.

--- a/xcp_d/data/nuisance/acompcor_gsr.yml
+++ b/xcp_d/data/nuisance/acompcor_gsr.yml
@@ -15,6 +15,8 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            res: null
+            den: null
             desc: confounds
             extension: .tsv
             suffix: timeseries
