--- a/xcp_d/data/nuisance/24P.yml
+++ b/xcp_d/data/nuisance/24P.yml
@@ -11,6 +11,8 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            res: null
+            den: null
             desc: confounds
             extension: .tsv
             suffix: timeseries
