--- a/xcp_d/data/nuisance/acompcor.yml
+++ b/xcp_d/data/nuisance/acompcor.yml
@@ -14,6 +14,8 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            res: null
+            den: null
             desc: confounds
             extension: .tsv
             suffix: timeseries
