--- a/xcp_d/data/nuisance/gsr_only.yml
+++ b/xcp_d/data/nuisance/gsr_only.yml
@@ -6,6 +6,9 @@ confounds:
     preproc_confounds:
         dataset: preprocessed
         query:
+            space: null
+            res: null
+            den: null
             desc: confounds
             extension: .tsv
             suffix: timeseries
