--- a/xcp_d/data/nuisance/rapidtide+36P.yml
+++ b/xcp_d/data/nuisance/rapidtide+36P.yml
@@ -14,34 +14,36 @@ confounds:
 		dataset: preprocessed
 		query:
 			space: null
+			res: null
+			den: null
 			desc: confounds
 			extension: .tsv
 			suffix: timeseries
-			columns:
-			- trans_x
-			- trans_x_derivative1
-			- trans_x_derivative1_power2
-			- trans_x_power2
-			- trans_y
-			- trans_y_derivative1
-			- trans_y_derivative1_power2
-			- trans_y_power2
-			- trans_z
-			- trans_z_derivative1
-			- trans_z_derivative1_power2
-			- trans_z_power2
-			- rot_x
-			- rot_x_derivative1
-			- rot_x_power2
-			- rot_x_derivative1_power2
-			- rot_y
-			- rot_y_derivative1
-			- rot_y_power2
-			- rot_y_derivative1_power2
-			- rot_z
-			- rot_z_derivative1
-			- rot_z_power2
-			- rot_z_derivative1_power2
+		columns:
+		- trans_x
+		- trans_x_derivative1
+		- trans_x_derivative1_power2
+		- trans_x_power2
+		- trans_y
+		- trans_y_derivative1
+		- trans_y_derivative1_power2
+		- trans_y_power2
+		- trans_z
+		- trans_z_derivative1
+		- trans_z_derivative1_power2
+		- trans_z_power2
+		- rot_x
+		- rot_x_derivative1
+		- rot_x_power2
+		- rot_x_derivative1_power2
+		- rot_y
+		- rot_y_derivative1
+		- rot_y_power2
+		- rot_y_derivative1_power2
+		- rot_z
+		- rot_z_derivative1
+		- rot_z_power2
+		- rot_z_derivative1_power2
 	rapidtide_slfo:
 		dataset: rapidtide
 		query:
