Fix cosine search pattern.

--- a/xcp_d/data/nuisance/acompcor.yml
+++ b/xcp_d/data/nuisance/acompcor.yml
@@ -34,4 +34,4 @@ confounds:
         - rot_z_derivative1
         - ^w_comp_cor_0[1-5]$
         - ^c_comp_cor_0[1-5]$
-        - ^cosine_\d+$
+        - ^cosine\d+$
