--- a/xcp_d/data/nuisance/aroma_gsr.yml
+++ b/xcp_d/data/nuisance/aroma_gsr.yml
@@ -9,6 +9,7 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            cohort: null
             res: null
             den: null
             desc: confounds
@@ -22,6 +23,7 @@ confounds:
         dataset: aroma
         query:
             space: null
+            cohort: null
             res: null
             den: null
             desc: aroma
