--- a/xcp_d/data/nuisance/gsr_only.yml
+++ b/xcp_d/data/nuisance/gsr_only.yml
@@ -7,6 +7,7 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            cohort: null
             res: null
             den: null
             desc: confounds
