--- a/xcp_d/data/nuisance/24P.yml
+++ b/xcp_d/data/nuisance/24P.yml
@@ -11,6 +11,7 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            cohort: null
             res: null
             den: null
             desc: confounds
