--- a/xcp_d/data/nuisance/36P.yml
+++ b/xcp_d/data/nuisance/36P.yml
@@ -12,6 +12,7 @@ confounds:
         dataset: preprocessed
         query:
             space: null
+            cohort: null
             res: null
             den: null
             desc: confounds
