--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint code
+name: Contribution checks
 
 on:
   push:
@@ -12,26 +12,27 @@ defaults:
   run:
     shell: bash
 
-jobs:
-  stable:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: ['ubuntu-latest']
-        python-version: ["3.10"]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
+permissions:
+  contents: read
+
+jobs:
+  style:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
-      - name: Install flake8 and related packages
-        run: python -m pip install \
-          flake8 flake8-absolute-import flake8-black flake8-docstrings \
-          flake8-isort flake8-pyproject flake8-unused-arguments \
-          flake8-use-fstring pep8-naming
-      - name: Check xcp_d
-        run: python -m flake8 xcp_d
+      - run: pipx run ruff check .
+      - run: pipx run ruff format --diff .
+
+  codespell:
+    name: Check for spelling errors
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Codespell
+        uses: codespell-project/actions-codespell@v2
