--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,7 @@ extend-select = [
   "Q",
 ]
 ignore = [
+  "S101",  # Ignore use of assert for now
   "S105",
   "S311",  # We are not using random for cryptographic purposes
   "ISC001",
