--- a/.codespellrc
+++ b/.codespellrc
@@ -1,6 +1,8 @@
 [codespell]
-skip = .git,*.pdf,*.svg,*.html,dataset_description.json
+skip = .git,*.pdf,*.svg,*.html,dataset_description.json,*.gii
 # te - TE
 # Weill - name
 # reson - Reson. abbreviation in citation
-ignore-words-list = te,weill,reson
+# DNE: acronym for does not exist
+# fo: acronym for file object
+ignore-words-list = te,weill,reson,DNE,fo
