--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -419,7 +419,7 @@ jobs:
 
   pnc_cifti:
     <<: *dockersetup
-    resource_class: medium
+    resource_class: large
     environment:
       CIRCLE_CPUS: 2
     steps:
@@ -461,7 +461,7 @@ jobs:
 
   pnc_cifti_t2wonly:
     <<: *dockersetup
-    resource_class: medium
+    resource_class: large
     environment:
       CIRCLE_CPUS: 2
     steps:
