--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "sentry-sdk ~= 2.20.0",  # for usage reports
     "templateflow ~= 24.2.0",
     "toml",
+    "trimesh",
 ]
 dynamic = ["version"]
 
