updated pyproject.toml with sphinx_design extension

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ doc = [
     "sphinxcontrib-apidoc",
     "sphinxcontrib-bibtex",
     "svgutils",
+    "sphinx_design",
 ]
 dev = [
     "ruff ~= 0.9.2",
