--- a/xcp_d/data/reports-spec.yml
+++ b/xcp_d/data/reports-spec.yml
@@ -149,7 +149,7 @@ sections:
   reportlets:
   - bids: {datatype: figures, desc: about, suffix: bold}
   - custom: boilerplate
-    path: '{out_dir}/logs'
+    path: '{reportlets_dir}/logs'
     bibfile: ['xcp_d', 'data/boilerplate.bib']
     caption: |
       <p>We kindly ask to report results postprocessed with this tool using the following boilerplate.</p>
@@ -162,6 +162,6 @@ sections:
       </p>
     title: Methods
   - custom: errors
-    path: '{out_dir}/sub-{subject}/log/{run_uuid}'
+    path: '{reportlets_dir}/sub-{subject}/log/{run_uuid}'
     captions: <em>NiReports</em> may have recorded failure conditions.
     title: Errors
