--- a/xcp_d/data/io_spec.yaml
+++ b/xcp_d/data/io_spec.yaml
@@ -81,6 +81,14 @@ queries:
             - null
             - fsaverage
             suffix: sphere
+        # Subject's surface sphere to be used to warp fsaverage meshes to fsLR space
+        lh_subject_sphere_msmsulc:
+            datatype: anat
+            desc: msmsulc
+            extension: .surf.gii
+            hemi: L
+            space: fsLR
+            suffix: sphere
         # White matter surface mesh in fsnative space (fsLR-space mesh will be searched for separately)
         lh_wm_surf:
             datatype: anat
@@ -106,6 +114,14 @@ queries:
             space:
             - null
             - fsaverage
+            suffix: sphere
+        # Subject's surface sphere to be used to warp fsaverage meshes to fsLR space
+        rh_subject_sphere_msmsulc:
+            datatype: anat
+            desc: msmsulc
+            extension: .surf.gii
+            hemi: R
+            space: fsLR
             suffix: sphere
         # White matter surface mesh in fsnative space (fsLR-space mesh will be searched for separately)
         rh_wm_surf:
