--- a/xcp_d/data/nuisance/acompcor_gsr.yml
+++ b/xcp_d/data/nuisance/acompcor_gsr.yml
@@ -4,9 +4,8 @@ description: |
     The top 5 aCompCor principal components from the white matter and
     cerebrospinal fluid compartments were selected as nuisance regressors
     [@behzadi2007component],
-    along with the six motion parameters and their temporal derivatives,
-    mean white matter signal, mean cerebrospinal fluid signal, and mean global signal
-    [@benchmarkp;@satterthwaite_2013].
+    along with the six motion parameters and their temporal derivatives
+    and mean global signal [@benchmarkp;@satterthwaite_2013].
     As the aCompCor regressors were generated on high-pass filtered data,
     the associated cosine basis regressors were included.
     This has the effect of high-pass filtering the data as well.
@@ -35,8 +34,6 @@ confounds:
         - rot_z
         - rot_z_derivative1
         - global_signal
-        - csf
-        - white_matter
-        - ^w_comp_cor_0[1-5]$
-        - ^c_comp_cor_0[1-5]$
+        - ^w_comp_cor_0[0-4]$
+        - ^c_comp_cor_0[0-4]$
         - ^cosine\d+$
