--- a/xcp_d/data/atlas_bids_config.json
+++ b/xcp_d/data/atlas_bids_config.json
@@ -12,19 +12,19 @@
         },
         {
             "name": "hemi",
-            "pattern": "hemi-(L|R)"
+            "pattern": "[_/\\\\]+hemi-(L|R)"
         },
         {
             "name": "res",
-            "pattern": "res-([a-zA-Z0-9]+)"
+            "pattern": "[_/\\\\]+res-([a-zA-Z0-9]+)"
         },
         {
             "name": "den",
-            "pattern": "den-([a-zA-Z0-9]+)"
+            "pattern": "[_/\\\\]+den-([a-zA-Z0-9]+)"
         },
         {
             "name": "desc",
-            "pattern": "desc-([a-zA-Z0-9]+)"
+            "pattern": "[_/\\\\]+desc-([a-zA-Z0-9]+)"
         },
         {
             "name": "suffix",
