--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,11 +155,10 @@ extend-select = [
   "Q",
 ]
 ignore = [
-  "S101",  # Ignore use of assert for now
   "S105",
   "S311",  # We are not using random for cryptographic purposes
-  "ISC001",
-  "S603",
+  # "ISC001",
+  # "S603",
 ]
 
 [tool.ruff.lint.flake8-quotes]
