--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,11 +155,9 @@ extend-select = [
   "Q",
 ]
 ignore = [
-  "S101",  # Ignore use of assert for now
   "S105",
   "S311",  # We are not using random for cryptographic purposes
-  "ISC001",
-  "S603",
+  "S603",  # subprocess used only for trusted commands (git, pandoc, test runners)
 ]
 
 [tool.ruff.lint.flake8-quotes]
