--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ xcp_d/tests/pytests
 xcp_d/tests/test_data
 xcp_d/tests/data/test_data
 .circleci/local_xcpd_path.txt
+.cursor
 
 # setuptools-scm
 xcp_d/_version.py
